--- a/front/tutorial/src/clients/client-edit/client-edit.component.html
+++ b/front/tutorial/src/clients/client-edit/client-edit.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    @if (client.clientId){
+    @if (client.id){
         <h1 style="color: white;">Modificar cliente</h1>
     } @else{
         <h1 style="color: white;">Crear cliente</h1>
@@ -8,7 +8,7 @@
     <form>
         <mat-form-field>
             <mat-label>Identificador</mat-label>
-            <input type="text" matInput placeholder="Identificador" [(ngModel)]="client.clientId" name="clientId" disabled>
+            <input type="text" matInput placeholder="Identificador" [(ngModel)]="client.id" name="clientId" disabled>
         </mat-form-field>
 
         <mat-form-field>
