--- a/front/tutorial/src/core/dialog-confirmation/dialog-confirmation.component.html
+++ b/front/tutorial/src/core/dialog-confirmation/dialog-confirmation.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <h1>{{title}}</h1>
-    <div [innerHTML]="description" class="description"></div>
+    <h1 style="color: white;">{{title}}</h1>
+    <div [innerHTML]="description" class="description" style="color: white;"></div>
 
     <div class="buttons">
         <button mat-stroked-button (click)="onClose()">NO</button>
