--- a/front/tutorial/src/loan/loan-edit/loan-edit.component.scss
+++ b/front/tutorial/src/loan/loan-edit/loan-edit.component.scss
@@ -1,7 +1,12 @@
 .container {
     margin: 20px;
+
     mat-form-field {
-        width: 300px;
+        width: 200px;
         margin-right: 20px;
+    }
+
+    .buttons {
+        text-align: left;
     }
 }
