--- a/front/tutorial/src/loan/loan-list/loan-list.component.html
+++ b/front/tutorial/src/loan/loan-list/loan-list.component.html
@@ -20,8 +20,12 @@
                 </mat-select>
             </mat-form-field>
 
-            <mat-label>Fecha</mat-label>
-            <input type="date" placeholder="Fecha">
+            <mat-form-field>
+                <mat-label>Fecha</mat-label>
+                <input matInput [matDatepicker]="picker" [(ngModel)]="filterDate" (dateChange)="handleDateChange($event.value)" name="date">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
         </form>
 
         <div class="buttons">
@@ -59,14 +63,15 @@
         <ng-container matColumnDef="action">
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
             <mat-cell *matCellDef="let loan">
-                <button mat-icon-button color="accent"><mat-icon>clear</mat-icon></button>
+                <button mat-icon-button color="accent" (click)="deleteAuthor(loan)"><mat-icon>clear</mat-icon></button>
             </mat-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
-    <!-- </div> -->
+    
+    <mat-paginator (page)="loadPage($event)" [pageSizeOptions]="[5, 10, 20]" [pageIndex]="pageNumber" [pageSize]="pageSize" [length]="totalElements" showFirstLastButtons></mat-paginator>
 
     <div class="buttons">
         <button mat-flat-button color="primary" (click)="createLoans()">
