--- a/front/tutorial/src/loan/loan-edit/loan-edit.component.html
+++ b/front/tutorial/src/loan/loan-edit/loan-edit.component.html
@@ -2,6 +2,12 @@
     <h1  style="color: white;">Crear Préstamo</h1>
 
     <form>
+
+        <mat-form-field>
+            <mat-label>Identificador</mat-label>
+            <input type="text" matInput placeholder="Identificador" [(ngModel)]="loan.id" name="loanId" disabled>
+        </mat-form-field>
+
         <mat-form-field>
             <mat-label>Título del juego</mat-label>
             <mat-select disableRipple [(ngModel)]="loan.game" name="game">
