--- a/front/tutorial/src/loan/loan-edit/loan-edit.component.scss
+++ b/front/tutorial/src/loan/loan-edit/loan-edit.component.scss
@@ -2,8 +2,12 @@
     margin: 20px;
 
     mat-form-field {
+        display: flex;
+        flex-direction: column;
         width: 200px;
-        margin-right: 20px;
+        margin: bottom 30px;
+        margin-right: 60px;
+        margin-left: 30px;
     }
 
     .buttons {
